--- a/WEB2/Web2Week 2/weatherapp-start/index.html
+++ b/WEB2/Web2Week 2/weatherapp-start/index.html
@@ -18,6 +18,7 @@
 		<div><canvas id="weather-icon" width="200" height="200"></canvas></div>
 		<div class="temp"></div>
 		<h1 class="weather-summary"></h1>
+		<div class="sunset"></div>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
